<resources>
    <string name="app_name">Podzial Wydatkow</string>
    <string name="zarejestruj_sie">Zarejestruj się</string>
    <string name="nazwa_uzytkownika">Nazwa użytkownika</string>
    <string name="haslo">Hasło</string>
    <string name="email">Email</string>
    <string name="wyloguj_sie">Wyloguj się</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="uzytkownicy">Uzytkownicy</string>
    <string name="ustawienia_konta">Ustawienia Konta</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="zaloguj_sie">Zaloguj się</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="has_o_min_6_znak_w">Hasło (min. 6 znaków)</string>
    <string name="nazwa_u_ytkownika_min_3_znaki">Nazwa użytkownika (min. 3 znaki)</string>
    <string name="zmie_obraz">ZMIEŃ OBRAZ</string>
    <string name="zmie_has_o">ZMIEŃ HASŁO</string>
    <string name="display_name">Display Name</string>
    <string name="nazwa_u_ytkownika_3_24_znaki">Nazwa użytkownika (3\-24 znaki)</string>
    <string name="u_ytkownicy">Użytkownicy</string>
    <string name="nazwa_u_ytkownika">Nazwa użytkownika</string>
    <string name="dodaj_do_znajomych">DODAJ DO ZNAJOMYCH</string>
    <string name="odrzu_zaproszenie">odrzuć zaproszenie</string>
    <string name="zapro_do_znajomych">zaproś do znajomych</string>
    <string name="wydatek">Wydatek</string>
    <string name="dodaj_wydatek">DODAJ WYDATEK</string>
    <string name="nazwa_wydatku">Nazwa wydatku</string>
    <string name="nazwa">Nazwa:</string>
    <string name="ile_zap_acono">Ile zapłacono:</string>
    <string name="suma">Suma</string>
    <string name="nowy_wydatek">Nowy Wydatek</string>
    <string name="ile_zap_acono_pln">Ile zapłacono? (PLN)</string>
    <string name="kto_zap_aci">Kto zapłacił?</string>
    <string name="p_ac_cy">Płacący</string>
    <string name="znajomy">Znajomy</string>
    <string name="ja">Ja</string>
    <string name="user_id">user_id</string>
    <string name="zap_aci">Zapłacił:</string>
    <string name="zap_acidot" />
    <string name="zap_aconodot" />
    <string name="wydatekdot" />
    <string name="welcome_screen_text">Witaj w aplikacji Podział Wydatków!</string>
    <string name="welcometext">Witaj w aplikacji  Podział Wydatków!</string>
    <string name="dalej">Dalej</string>
    <string name="user_email">User Email</string>
    <string name="zako_cz_dodawanie">Zakończ Dodawanie</string>
    <string name="usu_wydatek">Usuń wydatek</string>
    <string name="zaproszenia">Zaproszenia</string>


</resources>
